hopefully fixed background images not showing

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -22,18 +22,18 @@ body {
 }
 
 body {
-  background: url(./assets/images/bg-pattern-top-mobile.svg) no-repeat top 0px
+  background: url(../assets/images/bg-pattern-top-mobile.svg) no-repeat top 0px
       left 0px,
-    url(./assets/images/bg-pattern-bottom-mobile.svg) no-repeat bottom 0px right
-      0px,
+    url(../assets/images/bg-pattern-bottom-mobile.svg) no-repeat bottom 0px
+      right 0px,
     $color-bg;
   display: grid;
   @include flex_me($dir: column);
   margin: 1rem auto;
   @include mq("lg") {
-    background: url(./assets/images/bg-pattern-top-desktop.svg) no-repeat top
+    background: url(../assets/images/bg-pattern-top-desktop.svg) no-repeat top
         0px left 0px,
-      url(./assets/images/bg-pattern-bottom-desktop.svg) no-repeat bottom 0px
+      url(../assets/images/bg-pattern-bottom-desktop.svg) no-repeat bottom 0px
         right 0px,
       $color-bg;
   }
